@@ -2,10 +2,10 @@ diff --git a/.Diff-of-diff.diff b/.Diff-of-diff.diff
 new file mode 100644
 index 0000000000..e69de29bb2
 diff --git a/Changes b/Changes
-index 0028a08dfd..b4c2e017fe 100644
+index c714ce7dbe..9879dd372f 100644
 --- a/Changes
 +++ b/Changes
-@@ -172,6 +172,9 @@ Working version
+@@ -175,6 +175,9 @@ Working version
    DEFAULT_STRING=safe which are now the default unconditionally.
    (Kate Deplaix, review by Gabriel Scherer and David Allsopp)
  
@@ -15,7 +15,7 @@ index 0028a08dfd..b4c2e017fe 100644
  ### Bug fixes:
  
  - #11025, #11036: Do not pass -no-pie to the C compiler on musl/arm64
-@@ -220,13 +223,13 @@ OCaml 4.14.0
+@@ -223,13 +226,13 @@ OCaml 4.14.0
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -31,7 +31,7 @@ index 0028a08dfd..b4c2e017fe 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -326,6 +329,9 @@ OCaml 4.14.0
+@@ -329,6 +332,9 @@ OCaml 4.14.0
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -41,7 +41,7 @@ index 0028a08dfd..b4c2e017fe 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -574,6 +580,9 @@ OCaml 4.14.0
+@@ -577,6 +583,9 @@ OCaml 4.14.0
  
  ### Build system:
  
@@ -5416,7 +5416,7 @@ index 0000000000..2e88e50921
 + let size = 1000;;
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..86d7f11c67
+index 0000000000..68def74843
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,5348 @@
@@ -5424,10 +5424,10 @@ index 0000000000..86d7f11c67
 +new file mode 100644
 +index 0000000000..e69de29bb2
 +diff --git a/Changes b/Changes
-+index 0028a08dfd..b4c2e017fe 100644
++index c714ce7dbe..9879dd372f 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -172,6 +172,9 @@ Working version
++@@ -175,6 +175,9 @@ Working version
 +   DEFAULT_STRING=safe which are now the default unconditionally.
 +   (Kate Deplaix, review by Gabriel Scherer and David Allsopp)
 + 
@@ -5437,7 +5437,7 @@ index 0000000000..86d7f11c67
 + ### Bug fixes:
 + 
 + - #11025, #11036: Do not pass -no-pie to the C compiler on musl/arm64
-+@@ -220,13 +223,13 @@ OCaml 4.14.0
++@@ -223,13 +226,13 @@ OCaml 4.14.0
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -5453,7 +5453,7 @@ index 0000000000..86d7f11c67
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -326,6 +329,9 @@ OCaml 4.14.0
++@@ -329,6 +332,9 @@ OCaml 4.14.0
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -5463,7 +5463,7 @@ index 0000000000..86d7f11c67
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -574,6 +580,9 @@ OCaml 4.14.0
++@@ -577,6 +583,9 @@ OCaml 4.14.0
 + 
 + ### Build system:
 + 
